@@ -13,6 +13,9 @@
     See : http://www.mega-nerd.com/erikd/Blog/2009/Feb/14/index.html
     Thanks to David Cournapeau for the bug report.
 
+    * doc/win32.html Makefile.am configure.ac
+    Reinstate Win32/MSVC compile instructions.
+
 2009-02-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/common.h src/samplerate.c
